maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:91: error: illegal start of simple expression
		if(inter<T(i) && T(i)!=(-1))){
                                            ^